--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
+		"@types/jest": "^29.5.2",
+		"@types/node": "^20.4.0",
+		"@types/react": "^18.2.14",
+		"@types/react-dom": "^18.2.6",
+		"@types/react-router-dom": "^5.3.3",
 		"gh-pages": "^5.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
@@ -18,8 +23,8 @@
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
-		"deploy" : "gh-pages -d build",
-		"predeploy" : "npm run build"
+		"deploy": "gh-pages -d build",
+		"predeploy": "npm run build"
 	},
 	"eslintConfig": {
 		"extends": [
@@ -40,8 +45,8 @@
 		]
 	},
 	"devDependencies": {
-		"prettier": "2.8.8"
+		"prettier": "2.8.8",
+		"typescript": "^5.1.6"
 	},
-	"homepage" : "https://gitDaeHyun.github.io/ReactStart"
-
+	"homepage": "https://gitDaeHyun.github.io/ReactStart"
 }
