--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
 		"@types/react": "^18.2.14",
 		"@types/react-dom": "^18.2.6",
 		"@types/react-router-dom": "^5.3.3",
+		"chance": "^1.1.11",
 		"gh-pages": "^5.0.0",
+		"ramda": "^0.29.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^5.3.0",
@@ -45,8 +47,10 @@
 		]
 	},
 	"devDependencies": {
+		"@types/chance": "^1.1.3",
+		"@types/ramda": "^0.29.3",
 		"prettier": "2.8.8",
-		"typescript": "^5.1.6"
+		"typescript": "4.9.5"
 	},
 	"homepage": "https://gitDaeHyun.github.io/ReactStart"
 }
