--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^5.3.0",
 		"react-scripts": "5.0.1",
+		"styled-components": "^5.1.26",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
@@ -49,6 +50,7 @@
 	"devDependencies": {
 		"@types/chance": "^1.1.3",
 		"@types/ramda": "^0.29.3",
+		"@types/styled-components": "^5.1.26",
 		"prettier": "2.8.8",
 		"typescript": "4.9.5"
 	},
